fix tab spacing on left

--- a/stylus/hero.styl
+++ b/stylus/hero.styl
@@ -70,7 +70,7 @@ ul.tabs
   height: TAB_HEIGHT
   font-size: 16px
   list-style: none
-  margin: 0 0 0 6px
+  margin: 0 0 0 12px
 
   li
     display: inline-block
